tests/neg/i17443.scala
def run() =
  val x = List(1) match { case (xs*) => xs } // error
